correct spacing between i want to on mobile

--- a/src/components/Personas/Personas.scss
+++ b/src/components/Personas/Personas.scss
@@ -72,6 +72,7 @@
 
   @include for-phone-only {
     font-size: $font-body-l;
+    margin-bottom: space(20);
   }
 }
 
